--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  google_sign_in: ^6.3.0
-  kakao_flutter_sdk: ^1.9.7+3
-  kakao_flutter_sdk_user: ^1.9.7+3
   flutter_secure_storage: ^9.2.4
   http: ^1.3.0
+  shared_preferences: ^2.2.2
+
 
 dev_dependencies:
   flutter_test:
