--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.3.0
   shared_preferences: ^2.2.2
   provider: ^6.1.4
+  flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.6
 
 
 dev_dependencies:
@@ -100,3 +102,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+    image_path: "assets/icons/icon.png"
+    android: true
+    ios: true
+
+
+flutter_native_splash:
+  color: "#002147"  # 배경 색 (앱에 어울리는 색)
+  image: assets/splash/splash.png  # 이미지 경로
+  android: true
+  ios: true
+  web: false
