--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations: # 이 줄 추가
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -40,6 +41,7 @@ dependencies:
   provider: ^6.1.4
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.6
+  intl: ^0.19.0
 
 
 dev_dependencies:
