--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.6
   intl: ^0.19.0
+  flutter_riverpod: ^2.6.1
 
 
 dev_dependencies:
