--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   flutter_native_splash: ^2.4.6
   intl: ^0.19.0
   flutter_riverpod: ^2.6.1
-
+  sqflite: ^2.3.2
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
