--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   sqflite: ^2.3.2
   path: ^1.8.3
+  flutter_markdown: ^0.7.7+1
 
 dev_dependencies:
   flutter_test:
